<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="startbtn">START</string>
    <string name="app_name">RunnerApps</string>
    <string name="time_end">Time: 1:15</string>
    <string name="pace_end">Pace: Medium</string>
    <string name="speed_end">Speed: 10 km/h</string>
    <string name="current_song_end">Kanye West</string>
    <string name="end_button_bottom">END</string>
    <string name="person">Run</string>
    <string name="headphones">Music</string>
    <string name="statistics">Statistics</string>
    <string name="return_run_stat">End of Run Stats</string>
    <string name="return_top_speed">Top Speed: 80 km/h</string>
    <string name="return_avg_speed">Avg Speed: 15 km/h</string>
    <string name="return_distance">Distance: 800 km</string>
    <string name="return_time">Time: 60:30</string>
    <string name="return_button_bottom">Return</string>
    <string name="title_activity_return_page">Return Page</string>
    <string name="title_activity_start_run">StartRun</string>
    <string name="title_activity_music_page">MusicPage</string>
    <string name="title_activity_statistics_page">StatisticsPage</string>
    <string name="music_title">Welcome to your Playlist Selection</string>
    <string name="music_text">Hello D\'arcy \n We spent a while agreeing on a color scheme and general layout and design this week. We also played around making a menu and pages for practice.</string>
    <string name="music_linktext"> Check out our wireframe at</string>
    <string name="music_link">http://imgur.com/a/0mGMj</string>
    <string name="stats_title">Welcome to the Stats page. \n\nGraphs planned to be implemented</string>
</resources>
