<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.lp.runnerapps.ReturnPage"
    android:id="@+id/main"
    android:background="#ff507F">

    <TextView android:text="@string/return_run_stat" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textIsSelectable="true"
        android:id="@+id/return_run_stat"
        android:textColor="#1970fF"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp" />

    <TextView
        android:text="@string/return_top_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textIsSelectable="false"
        android:id="@+id/textView"
        android:textColor="#6683f6"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:text="@string/return_avg_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textIsSelectable="false"
        android:id="@+id/textView2"
        android:textColor="#6683f6"
        android:layout_above="@+id/textView3"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button" />

    <TextView
        android:text="@string/return_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textIsSelectable="false"
        android:id="@+id/textView3"
        android:textColor="#6683f6"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/return_run_stat"
        android:layout_alignStart="@+id/return_run_stat" />

    <TextView
        android:text="@string/return_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textIsSelectable="false"
        android:id="@+id/textView4"
        android:textColor="#6683f6"
        android:layout_below="@+id/return_run_stat"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_button_bottom"
        android:id="@+id/button"
        android:textSize="50sp"
        android:textColor="#FFFFFF"
        android:background="#3562b5"
        android:paddingRight="25sp"
        android:nestedScrollingEnabled="false"
        android:paddingLeft="25sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp" />

</RelativeLayout>
